Content: add more resources

--- a/src/pages/a11y.md
+++ b/src/pages/a11y.md
@@ -3,25 +3,16 @@ title: Accessibility
 layout: page.njk
 ---
 
-- [A11Y Project](https://www.a11yproject.com/checklist/)
+- [A11Y Project](https://www.a11yproject.com/checklist/) - checklist that uses The Web Content Accessibility Guidelines (WCAG) as a reference point.
 
-    checklist that uses The Web Content Accessibility Guidelines (WCAG) as a reference point.
-- [Color Contrast A11Y](https://color.a11y.com/?wc3)
+- [Color Contrast A11Y](https://color.a11y.com/?wc3) - Color Contrast Accessibility Validator.
 
-    Color Contrast Accessibility Validator.
-- [Toolness Color Matrix](https://toolness.github.io/accessible-color-matrix/)
+- [Toolness Color Matrix](https://toolness.github.io/accessible-color-matrix/) - Accessible color palette builder
 
-    Accessible color palette builder
+- [Confrere](https://confrere.com/a11y/test/) - Accessible color palette builder
 
-- [Confrere](https://confrere.com/a11y/test/)
-
-    Accessible color palette builder
-
-- [Color Safe](http://colorsafe.co/)
-
-    Empowering designers with beautiful and accessible color palettes based on WCAG Guidelines of text and background contrast ratios.
+- [Color Safe](http://colorsafe.co/) - Empowering designers with beautiful and accessible color palettes based on WCAG Guidelines of text and background contrast ratios.
     
 - [Color Blind Web Page Filter](https://www.toptal.com/designers/colorfilter).
-- [Hex Naw](https://hexnaw.com/)
 
-    A color accessibility tool for designers and developers.
+- [Hex Naw](https://hexnaw.com/) - A color accessibility tool for designers and developers.
