add more resources and add description to some resources

--- a/src/pages/a11y.md
+++ b/src/pages/a11y.md
@@ -3,6 +3,8 @@ title: Accessibility
 layout: page.njk
 ---
 
+
+
 - [A11Y Project](https://www.a11yproject.com/checklist/) - checklist that uses The Web Content Accessibility Guidelines (WCAG) as a reference point.
 
 - [Color Contrast A11Y](https://color.a11y.com/?wc3) - Color Contrast Accessibility Validator.
@@ -16,3 +18,7 @@ layout: page.njk
 - [Color Blind Web Page Filter](https://www.toptal.com/designers/colorfilter).
 
 - [Hex Naw](https://hexnaw.com/) - A color accessibility tool for designers and developers.
+
+- [Access & Use](https://accessuse.eu/en/) - is a small web site that shows what it needs to make dynamic elements in websites accessible and usable for all.
+
+- [Contrast Grid](https://contrast-grid.eightshapes.com) - Test many foreground and background color combos for compliance with WCAG 2.0 minimum contrast. 
